Fix white gap on game page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,10 @@ body {
     color: #6E260E;
 }
 
+.game-container{
+    margin-bottom: -20vh;
+}
+
 /* Game Modal */
 .modal-content {
     border-radius: 0;
